--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,77 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#4B0082" >
+    android:background="#F8F8F8"
+    tools:context=".LoginActivity">
 
-    <!-- Logo -->
-<ImageView
-android:id="@+id/imgLogo"
-android:layout_width="150dp"
-android:layout_height="150dp"
-android:layout_centerHorizontal="true"
-android:layout_marginTop="80dp"
+    <TextView
+        android:id="@+id/headerText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="Login"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="#02393e"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-android:contentDescription="App Logo" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:background="#FFFFFF"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintTop_toBottomOf="@id/headerText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <!-- Username Field -->
-<EditText
-android:id="@+id/etUsername"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_below="@id/imgLogo"
-android:layout_marginTop="40dp"
-android:layout_marginStart="32dp"
-android:layout_marginEnd="32dp"
-android:hint="Username"
-android:backgroundTint="#FFFFFF"
-android:padding="12dp"
-android:textColor="#000000"
-android:textSize="16sp"
-android:inputType="text" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="20dp">
 
-    <!-- Password Field -->
-<EditText
-android:id="@+id/etPassword"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_below="@id/etUsername"
-android:layout_marginTop="20dp"
-android:layout_marginStart="32dp"
-android:layout_marginEnd="32dp"
-android:hint="Password"
-android:backgroundTint="#FFFFFF"
-android:padding="12dp"
-android:textColor="#000000"
-android:textSize="16sp"
-android:inputType="textPassword" />
+            <EditText
+                android:id="@+id/editTextEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:textSize="18sp"
+                android:textColor="#37474F"
+                android:backgroundTint="#B0BEC5" />
 
-    <!-- Login Button -->
-<Button
-android:id="@+id/btnLogin"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_below="@id/etPassword"
-android:layout_marginTop="30dp"
-android:layout_marginStart="32dp"
-android:layout_marginEnd="32dp"
-android:backgroundTint="#FFFFFF"
-android:text="LOGIN"
-android:textColor="#4B0082"
-android:textStyle="bold"
-android:textSize="16sp" />
+            <EditText
+                android:id="@+id/editTextPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textSize="18sp"
+                android:textColor="#37474F"
+                android:backgroundTint="#B0BEC5" />
 
-    <!-- Sign-Up Link -->
-<TextView
-android:id="@+id/tvSignUpLink"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:layout_below="@id/btnLogin"
-android:layout_centerHorizontal="true"
-android:layout_marginTop="20dp"
-android:text="Don't have an account? Sign up now"
-android:textColor="#ADD8E6"
-android:textSize="14sp" />
+            <Button
+                android:id="@+id/login"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:backgroundTint="#02393e"
+                android:elevation="4dp"
+                android:text="Login"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp" />
 
-    </RelativeLayout>
+            <Button
+                android:id="@+id/createAccountButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="#FFFFFF"
+                android:elevation="2dp"
+                android:text="Create an Account"
+                android:textColor="#37474F"
+                android:textSize="16sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
