--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,5 @@
     <color name="button_white">#FFFFFF</color>
     <color name="text_black">#000000</color>
     <color name="link_blue">#ADD8E6</color>
-
+    <color name="primary">#6200EE</color>
 </resources>
