--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8F8F8"
+    android:padding="16dp"
+    android:background="@color/white"
     tools:context=".LoginActivity">
 
     <TextView
@@ -79,6 +80,21 @@
                 android:text="Create an Account"
                 android:textColor="#37474F"
                 android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/forgotPasswordText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forgot Password?"
+                android:textColor="#37474F"
+                android:textStyle="bold"
+                android:layout_marginTop="8dp"
+                android:layout_gravity="end"
+                android:clickable="true"
+                android:focusable="true" />
+
+
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
