--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,15 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
-    <TextView
+
+
+    <Button
+        android:id="@+id/btn_flashcards"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome back!"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="#02393e"
+        android:text="Flashcards"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
